<resources>
    <string name="app_name">Radiance</string>
    <string name="welcome">The Best Electronic Items at the Right Place</string>
    <string name="search_text">Search</string>
    <string name="home_title">Home</string>
    <string name="profile_text">Profile</string>
    <string name="orders_text">Orders</string>
    <string name="notification_text">Notifications</string>
    <string name="cart_text">Cart</string>
    <string name="sign_out_text">Sign Out</string>
    <string name="sign_in_text">Sign In</string>
    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wishlist_text">Wishlist</string>
    <string name="products_text">Products</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="email_field_text">Enter your email address or mobile number</string>
    <string name="password_field_text">Enter your password</string>
    <string name="create_password_field_text">Create your password</string>
    <string name="location_text">Location</string>
    <string name="help_center_text">Help Center</string>
    <string name="provacy_policy_text">Privacy Policy</string>
    <string name="welcome_to_radiance">Welcome to Radiance</string>
    <string name="radiance_description">Unveil Your Style, Discover Your Favorites. Shop now and redefine your shopping experience with us.</string>
    <string name="or_text">Or</string>
    <string name="sign_in_with_google_account_text">Sign In with Google Account</string>
    <string name="fogot_password_text">Fogot Password?</string>
    <string name="don_t_have_an_account_text">Don\'t have an account?</string>
    <string name="sign_up_with_google_account_text">Sign Up with Google Account</string>
    <string name="already_have_an_acount_text">Already have an Acount?</string>
    <string name="email_warning_text">Please enter valid email or mobile number</string>
    <string name="password_warning_text">Password must be at least 8 characters.</string>
    <string name="cart_title">0 Items in cart</string>
    <string name="sub_total_text">Sub Total</string>
    <string name="shipping_text">Shipping</string>
    <string name="total_text">Total</string>
    <string name="finalize_order_text">Finalize Order</string>
    <string name="category_title_text">Categories</string>
    <string name="see_all_text">See All</string>
    <string name="new_arriavals_text">New Arriavals</string>
    <string name="trending_now_text">Trending Now</string>
    <string name="more_to_love_text">More to Love</string>
    <string name="password_text">Password</string>
    <string name="email_address_field_text">Email Address</string>
    <string name="first_name_text">First Name</string>
    <string name="last_name_text">Last Name</string>
    <string name="city_field">City</string>
    <string name="mobile_number_text">Mobile Number</string>
    <string name="update_text">Update</string>
    <string name="your_cart_is_empty_text">Your cart is empty</string>
    <string name="looks_like_you_haven_t_added_any_products_to_your_cart_yet_text">Looks like you haven\'t added any products to your cart yet.</string>
    <string name="start_shopping_text">Start Shopping</string>
    <string name="yor_wish_list_is_empty_text">Yor wishlist is empty</string>
    <string name="looks_like_you_haven_t_added_anything_to_your_wishlist_yet_text">Looks like you haven\'t added anything to your wishlist yet.</string>
    <string name="clear_all_text">Clear All</string>
    <string name="search_again_text">Search Again</string>
    <string name="you_have_no_notifications_right_now_come_back_later_to_check_for_new_notifications_text">You have no notifications right now.Come back later to check for new notifications.</string>
    <string name="no_notifications_yet_text">No notifications yet</string>
    <string name="no_orders_yet_text">No orders yet</string>
    <string name="when_orders_are_visible_you_ll_see_them_here_explore_the_app_text">When orders are visible, you\'ll see them here. Explore the app.</string>
    <string name="explore_the_app_text">Explore the app</string>
    <string name="product_details_text">Product Details</string>
    <string name="product_registration_text">Product Registration</string>
    <string name="my_product_text">My Products</string>
    <string name="add_product_images_text">Add Product Images</string>
    <string name="enter_product_title_text">Enter product title</string>
    <string name="enter_product_price_text">Enter product price</string>
    <string name="enter_qty_text">Enter qty</string>
    <string name="enter_product_description_text">Enter product description</string>
    <string name="add_product_text">Add Product</string>
    <string name="about_us_text">About Us</string>
    <string name="you_have_no_products_text">You have no products</string>
    <string name="looks_like_you_haven_t_added_anything_text">looks like you haven\'t added anything</string>
    <string name="web_client_id">1032837080230-1sq0n60bosbdj2e7s8iep17o6itdds5o.apps.googleusercontent.com</string>
    <string name="to_access_this_feature_you_need_to_switch_your_account_to_a_seller_account_once_you_ve_made_the_switch_you_ll_be_able_to_navigate_to_the_product_registration_section_where_you_can_view_and_manage_your_items_text">To access this feature, you need to switch your account to a seller account. Once you\'ve made the switch, you\'ll be able to navigate to the product registration section, where you can view and manage your items.</string>
    <string name="switch_to_seller_account_text">Switch to Seller Account</string>
    <string name="switch_to_a_seller_account_and_manage_your_items_text">Switch to a Seller Account and Manage Your Items</string>
    <string name="computer_accessories_text">Computers and Accessories</string>
    <string name="electronic_items_and_accessories_text">Electronic Items and Accessories</string>
    <string name="my_location_text">My Location</string>
</resources>