<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signInCoordinatiorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="@color/white"
    tools:context=".SignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:backgroundTint="@color/white">

        <View
            android:id="@+id/view2"
            android:layout_width="wrap_content"
            android:layout_height="580dp"
            android:background="@drawable/bottom_nav_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="170dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="171dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="177dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="176dp"
            android:text="@string/welcome_to_radiance"
            android:textColor="@color/primary_color"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />


        <EditText
            android:id="@+id/emailFieldSignIn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="36dp"
            android:background="@drawable/custom_input_rounded"
            android:drawableStart="@drawable/email_icon"
            android:drawablePadding="10dp"
            android:hint="@string/email_field_text"
            android:inputType="text"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <EditText
            android:id="@+id/passwordFieldSignIn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="36dp"
            android:background="@drawable/custom_input_rounded"
            android:drawableStart="@drawable/key_icon"
            android:drawablePadding="10dp"
            android:hint="@string/create_password_field_text"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingRight="20dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/welcome"
            android:textColor="@color/primary_color"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/view2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/signInBtnTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sign_in_text"
                android:textColor="@color/primary_color"
                android:textSize="20sp" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/signUpBtnTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_input_rounded_dark"
                android:text="@string/sign_up_text"
                android:padding="6sp"
                android:paddingStart="20sp"
                android:paddingEnd="20sp"
                android:textColor="@color/dark_white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:text="@string/radiance_description"
            android:textColor="@color/matte_light_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view2" />

        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/orange"
            android:text="@string/sign_up_text"
            app:layout_constraintEnd_toEndOf="@+id/passwordFieldSignIn"
            app:layout_constraintStart_toStartOf="@+id/passwordFieldSignIn"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/or_text"
            android:textAlignment="center"
            android:textColor="@color/matte_light_dark"
            app:layout_constraintEnd_toEndOf="@+id/signUpBtn"
            app:layout_constraintStart_toStartOf="@+id/signUpBtn"
            app:layout_constraintTop_toBottomOf="@+id/signUpBtn" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="@+id/textView6"
            app:layout_constraintEnd_toStartOf="@+id/textView6"
            app:layout_constraintStart_toStartOf="@+id/signUpBtn"
            app:layout_constraintTop_toTopOf="@+id/textView6" />

        <View
            android:id="@+id/divider3"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="@+id/textView6"
            app:layout_constraintEnd_toEndOf="@+id/signUpBtn"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="@+id/textView6" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/signUpWithGoogleBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/custom_input_rounded"
            android:backgroundTint="@color/dark_white"
            app:layout_constraintEnd_toEndOf="@+id/divider3"
            app:layout_constraintStart_toStartOf="@+id/divider"
            app:layout_constraintTop_toBottomOf="@+id/textView6">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    app:srcCompat="@drawable/google_icon" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/signInWithGoogle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sign_up_with_google_account_text" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/info_icon"
            android:drawablePadding="8dp"
            android:drawableTint="@color/matte_light_dark"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/email_warning_text"
            android:textColor="@color/matte_light_dark"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="@+id/emailFieldSignIn"
            app:layout_constraintTop_toBottomOf="@+id/emailFieldSignIn" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/info_icon"
            android:drawablePadding="8dp"
            android:drawableTint="@color/matte_light_dark"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/password_warning_text"
            android:textColor="@color/matte_light_dark"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="@+id/passwordFieldSignIn"
            app:layout_constraintTop_toBottomOf="@+id/passwordFieldSignIn" />

        <LinearLayout
            android:id="@+id/linearLayout8"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/signUpWithGoogleBtn"
            app:layout_constraintStart_toStartOf="@+id/signUpWithGoogleBtn"
            app:layout_constraintTop_toBottomOf="@+id/signUpWithGoogleBtn">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/already_have_an_acount_text" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sign_in_text"
                android:textColor="@color/primary_color"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/homeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/custom_input"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/home_icon" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

