<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyProductFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/myProductsBodyEmptyLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header">


        <ImageView
            android:id="@+id/emptyImageMyProduct"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="36dp"
            android:src="@drawable/empty_street"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="107dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="107dp"
            android:text="@string/you_have_no_products_text"
            android:textColor="@color/matte_light_dark"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emptyImageMyProduct" />

        <TextView
            android:id="@+id/textView49"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/looks_like_you_haven_t_added_anything_text"
            android:textAlignment="center"
            android:textColor="@color/matte_light_dark"
            app:layout_constraintEnd_toEndOf="@+id/textView30"
            app:layout_constraintStart_toStartOf="@+id/textView30"
            app:layout_constraintTop_toBottomOf="@+id/textView30" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/primary_color"
            android:text="@string/add_product_text"
            app:layout_constraintEnd_toEndOf="@+id/textView49"
            app:layout_constraintStart_toStartOf="@+id/textView49"
            app:layout_constraintTop_toBottomOf="@+id/textView49" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:src="@drawable/back_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/my_product_text"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/primary_color"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.384"
            app:layout_constraintStart_toEndOf="@+id/imageButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.272" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/myProductsBodyLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/productListRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/myProductCustomerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header">


        <ImageView
            android:id="@+id/emptyImageMyProductView"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginTop="70dp"
            android:src="@drawable/add_products_validation_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/titleValidationMyProductView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/switch_to_a_seller_account_and_manage_your_items_text"
            android:textAlignment="center"
            android:textColor="@color/matte_light_dark"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emptyImageMyProductView" />

        <TextView
            android:id="@+id/bodyTextValidationMyProductView"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/to_access_this_feature_you_need_to_switch_your_account_to_a_seller_account_once_you_ve_made_the_switch_you_ll_be_able_to_navigate_to_the_product_registration_section_where_you_can_view_and_manage_your_items_text"
            android:textAlignment="center"
            android:textColor="@color/matte_light_dark"
            app:layout_constraintEnd_toEndOf="@+id/titleValidationMyProductView"
            app:layout_constraintStart_toStartOf="@+id/titleValidationMyProductView"
            app:layout_constraintTop_toBottomOf="@+id/titleValidationMyProductView" />

        <Button
            android:id="@+id/switchToSellerAccountBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/primary_color"
            android:text="@string/switch_to_seller_account_text"
            app:layout_constraintEnd_toEndOf="@+id/bodyTextValidationMyProductView"
            app:layout_constraintStart_toStartOf="@+id/bodyTextValidationMyProductView"
            app:layout_constraintTop_toBottomOf="@+id/bodyTextValidationMyProductView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>